Fix home page section spacing

--- a/_sass/kankoda/site/sections.scss
+++ b/_sass/kankoda/site/sections.scss
@@ -66,7 +66,7 @@ section.showcase {
   }
 
   article + article {
-    margin-top: calc(clamp(5rem, 8vw, 7rem) - 2rem) !important;
+    margin-top: 5rem !important;
   }
 
   p, .wrapper > p {
@@ -75,7 +75,7 @@ section.showcase {
 
   .wrapper {
     display: grid;
-    gap: 2.3rem;
+    gap: clamp(1.25rem, 3vw, 2.3rem);
     justify-items: center;
     align-content: start;
 
